Multicore USB controlled ili9486

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,4 +2,5 @@ if (NOT PICO_NO_HARDWARE)
     add_subdirectory(lcd_ssd1306_i2c)
     add_subdirectory(lcd_ili9486_spi)
     add_subdirectory(lcd_ili9486_parallel)
+    add_subdirectory(usb_lcd_ili9486)
 endif ()
