--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,4 +3,5 @@ if (NOT PICO_NO_HARDWARE)
     add_subdirectory(lcd_ili9486_spi)
     add_subdirectory(lcd_ili9486_parallel)
     add_subdirectory(usb_lcd_ili9486)
+    add_subdirectory(usb_grlib)
 endif ()
